Fixed setting button visibility

--- a/index.scss
+++ b/index.scss
@@ -55,4 +55,7 @@ h1 + .subtitle {
   border-color: black;
 }
 
-// $box-shadow: 0 1em 1em -0.125em rgba($scheme-invert, 0.4), 0 0px 0 1px rgba($scheme-invert, 0.4);
+
+.settings-icon {
+  font-size: xx-large;
+}
